--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "homepage": "https://github.com/eezing/rainbow#readme",
   "devDependencies": {
     "eslint": "^3.15.0",
-    "eslint-plugin-react": "^6.9.0",
-    "redux-devtools-extension": "^2.13.0"
+    "eslint-plugin-react": "^6.9.0"
   },
   "dependencies": {
     "color-js": "^1.0.4",
     "next": "beta",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
     "redux-thunk": "^2.2.0"
   }
 }
