--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   },
   "dependencies": {
     "color-js": "^1.0.4",
-    "next": "beta",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "next": "2.0.0-beta.24",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
