--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/eezing/rainbow#readme",
   "devDependencies": {
-    "eslint": "^3.15.0",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint": "^4.5.0",
+    "eslint-plugin-react": "^7.3.0"
   },
   "dependencies": {
     "color-js": "^1.0.4",
-    "next": "2.0.0-beta.24",
+    "next": "^3.0.6",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
