--- a/.eslintrc
+++ b/.eslintrc
@@ -1,44 +1,42 @@
-{
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "node": true
-    },
-    "extends": ["eslint:recommended", "plugin:react/recommended"],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "jsx": true
-        },
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "react/display-name": 0,
-        "eqeqeq": "warn",
-        "indent": [
-            "warn"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "warn",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "comma-spacing": [
-            "error", {
-                "before": false,
-                "after": true
-            }
-        ]
-    }
-}
+---
+env:
+  browser: true
+  commonjs: true
+  es6: true
+  node: true
+  jest: true
+extends:
+  - eslint:recommended
+  - plugin:react/recommended
+parser: babel-eslint
+parserOptions:
+  ecmaFeatures:
+    experimentalObjectRestSpread: true
+    jsx: true
+    modules: true
+  ecmaVersion: 6
+  sourceType: module
+plugins:
+  - react
+rules:
+  comma-spacing:
+    - error
+    - after: true
+      before: false
+  eqeqeq: warn
+  indent:
+    - warn
+    - 2
+    - SwitchCase: 1
+  linebreak-style:
+    - error
+    - unix
+  quotes:
+    - warn
+    - single
+  react/display-name: 0
+  semi:
+    - error
+    - always
+  no-console:
+    - warn
